UPDATED: some issues on mobile screens in header section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -327,32 +327,56 @@ img {
 }
 @media (max-width: 768px) {
   .header__wrapper {
+    position: absolute;
+    top: auto;
+    right: auto;
+    bottom: auto;
+    left: auto;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-flow: column nowrap;
     gap: 0;
-    position: unset;
     width: 88%;
     text-align: center;
   }
 }
 .header__wrapper .header__title {
-  font-size: clamp(2.5rem, 2.7vw, 8rem);
+  font-size: 2.6rem;
   color: #FFC654;
   font-family: "PT Sans Caption", sans-serif;
   font-weight: normal;
   border-radius: none;
   border: none;
 }
+@media (max-width: 768px) {
+  .header__wrapper .header__title {
+    font-size: 2.2rem;
+    color: #FFC654;
+    font-family: "PT Sans Caption", sans-serif;
+    font-weight: normal;
+    border-radius: none;
+    border: none;
+  }
+}
 .header__wrapper .header__p {
-  font-size: clamp(1.3rem, 1.3vw, 2rem);
+  font-size: 1.33rem;
   color: #f1f1f1;
   font-family: "Poppins", sans-serif;
   font-weight: normal;
   border-radius: none;
   border: none;
   margin: 1.5rem 0;
+}
+@media (max-width: 768px) {
+  .header__wrapper .header__p {
+    font-size: 1.2rem;
+    color: #f1f1f1;
+    font-family: "Poppins", sans-serif;
+    font-weight: normal;
+    border-radius: none;
+    border: none;
+  }
 }
 @media (max-width: 768px) {
   .header__wrapper .header__earth, .header__wrapper .header__moon, .header__wrapper .header__star {
